syntax = "proto3";

package infogorod.auth.auth.v1;

option csharp_namespace = "Infogorod.Auth.Auth.V1";
option go_package = "infogorod/auth/auth/v1;authv1";
option java_multiple_files = true;
option java_outer_classname = "AuthProto";
option java_package = "com.infogorod.auth.auth.v1";
option objc_class_prefix = "IAA";
option php_namespace = "Infogorod\\Auth\\Auth\\V1";

import "google/protobuf/timestamp.proto";

// Пользователь.
message User {
  // Идентификатор СУДИР.
  string cloud_id = 1;
  // СНИЛС.
  string snils = 2;
  // Информация о пользователе.
  UserInfo info = 3;
  // Информация о сотруднике.
  repeated Employee employees = 4;
  // Идентификатор сессии СУДИР.
  string sudir_sid = 5;
}

// Сотрудник.
message Employee {
  // ИНН организации.
  string inn = 1;
  // Идентификатор организации.
  string org_id = 2;
  // ФИО сотрудника.
  string fio = 3;
}

// Реквизиты для входа мобильного приложения.
message Credentials {
  // Идентификатор инстанса мобильного приложения.
  string client_id = 1;
  // Пароль инстанса мобильного приложения.
  string client_secret = 2;
}

// Информация о пользователе.
message UserInfo {
  // Email пользователя.
  string email = 1;
  // Имя для входа.
  string logon_name = 2;
  // Идентификатор в домене.
  string sub = 3;
  // Фамилия.
  string last_name = 4;
  // Имя.
  string first_name = 5;
  // Отчество.
  string middle_name = 6;
  // Организация из СУДИР.
  string sudir_company = 7;
  // Подразделение из СУДИР.
  string sudir_department = 8;
  // Должность из СУДИР.
  string sudir_position = 9;
}

// Разрешения СУДИР.
enum Scope {
  SCOPE_INVALID = 0;
  SCOPE_OPEN_ID = 1;
  SCOPE_PROFILE = 2;
  SCOPE_EMAIL = 3;
  SCOPE_USER_INFO = 4;
  SCOPE_EMPLOYEE = 5;
  SCOPE_GROUPS = 6;
}

// Информация об access token.
message TokenInfo {
  // Субъект, которому выдан токен.
  string subject = 1;
  // Перечень разрешений токена.
  repeated Scope scopes = 2;
  // Тип токена (Bearer, Basic, и тд).
  string token_type = 3;
  // Идентификатор системы (клиент СУДИР), которой был выдан токен.
  string client_id = 4;
  // Время, в которое был выдан токен.
  google.protobuf.Timestamp issued_time = 5;
  // Время, когда токен станет невалидным.
  google.protobuf.Timestamp exp_time = 6;
  // Статус активности токена.
  bool is_active = 7;
}
